--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: "Github and documentation of your open source project: a practical guide! "
-description: useful for makers who'd like to start documenting their open source project seriously. No documenting, no real open source  project
+title: "Gitumentation: a practical guide! "
+description: Using Github a documentation tool for your open source project
