--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: "Gitumentation: a practical guide! "
-description: Using Github a documentation tool for your open source project
+description: Using Github as a documentation tool for your open source project
